fix unlock word align

--- a/packages/popup/src/containers/unlock/unlockStyle.css
+++ b/packages/popup/src/containers/unlock/unlockStyle.css
@@ -73,6 +73,7 @@
   color: #666666;
   font-size: 12px;
   line-height: 24px;
+  text-align: center;
 }
 
 .unlock-modal-btnbox {
